force-app/main/default/objects/LLC_BI__CFG_CKJ__c/fields/LLC_BI__CFG_ConfigKeys__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CFG_ConfigKeys__c</fullName>
    <description>This field is optional and is manually populated. It is used as a Master Detail look up to Configuration Keys, allowing the keys to be linked to the Configuration Values.</description>
    <label>CFG_ConfigKeys</label>
    <referenceTo>LLC_BI__CFG_ConfigKey__c</referenceTo>
    <relationshipLabel>CFG_CKJs</relationshipLabel>
    <relationshipName>CFG_CKJs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>