force-app/main/default/objects/LLC_BI__CFG_CKJ__c/fields/LLC_BI__CFG_ConfigValue__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CFG_ConfigValue__c</fullName>
    <description>This field is optional and is manually populated. It is used as a Master Detail look up to Configuration Value, allowing the values to be linked to the Configuration Keys.</description>
    <label>CFG_ConfigValue</label>
    <referenceTo>LLC_BI__CFG_ConfigValue__c</referenceTo>
    <relationshipLabel>CFG_CKJs</relationshipLabel>
    <relationshipName>CFG_CKJs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>