force-app/main/default/objects/LLC_BI__CFG_CKJ__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and is manually populated.</description>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Product</relationshipLabel>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>