force-app/main/default/objects/LLC_BI__CFG_CKJ__c/fields/LLC_BI__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and is manually populated.</description>
    <label>Product Type</label>
    <referenceTo>LLC_BI__Product_Type__c</referenceTo>
    <relationshipLabel>Product Type</relationshipLabel>
    <relationshipName>Product_Type</relationshipName>
    <type>Lookup</type>
</CustomField>