force-app/main/default/objects/LLC_BI__CFG_CKJ__c/fields/LLC_BI__sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__sObject_Type__c</fullName>
    <description>Administrators populate this optional lookup field to specify the object the CFG_CKJ applies to.</description>
    <label>sObject Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LLC_BI__Loan__c</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Treasury_Service__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>